# gabocutter-example

./: 404.html  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml  main.yml
docs/: index.md  modules.md
modules/: index.html
search/: search_index.json
tests/: test_foo.py
